--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
     "wired-elements": "^3.0.0-rc.6"
+  },
+  "devDependencies": {
+    "prisma": "^4.15.0"
   }
 }
