🗃️ Syncing users between passage and db

--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   },
   "dependencies": {
     "@passageidentity/passage-elements": "^1.9.1",
+    "@passageidentity/passage-node": "^2.3.0",
+    "@prisma/client": "^4.16.0",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "next": "13.4.6",
+    "next-connect": "^1.0.0-next.4",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -23,6 +27,6 @@
     "wired-elements": "^3.0.0-rc.6"
   },
   "devDependencies": {
-    "prisma": "^4.15.0"
+    "prisma": "^4.16.0"
   }
 }
