--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "@types/react-dom": "18.2.5",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "nanoid": "^4.0.2",
     "next": "13.4.6",
     "next-connect": "^1.0.0-next.4",
+    "nprogress": "^0.2.0",
+    "octokit": "^2.1.0",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -28,6 +31,7 @@
     "wired-elements": "^3.0.0-rc.6"
   },
   "devDependencies": {
+    "@types/nprogress": "^0.2.0",
     "prisma": "^4.16.0"
   }
 }
