--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "octokit": "^2.1.0",
     "postcss": "8.4.24",
     "react": "18.2.0",
+    "react-calendar": "^4.3.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
     "tailwindcss": "3.3.2",
