✨ Created basic editor

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
   "cSpell.words": [
     "nprogress",
-    "passageidentity"
+    "passageidentity",
+    "tiptap"
   ],
   "discord.enabled": false
 }
