--- a/package.json
+++ b/package.json
@@ -12,6 +12,13 @@
     "@passageidentity/passage-elements": "^1.9.1",
     "@passageidentity/passage-node": "^2.3.0",
     "@prisma/client": "^4.16.0",
+    "@tiptap/extension-document": "^2.0.3",
+    "@tiptap/extension-paragraph": "^2.0.3",
+    "@tiptap/extension-placeholder": "^2.0.3",
+    "@tiptap/extension-text": "^2.0.3",
+    "@tiptap/pm": "^2.0.3",
+    "@tiptap/react": "^2.0.3",
+    "@tiptap/starter-kit": "^2.0.3",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
