--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react-dom": "18.2.5",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "dayjs": "^1.11.8",
     "nanoid": "^4.0.2",
     "next": "13.4.6",
     "next-connect": "^1.0.0-next.4",
